# Kalina

./: CMakeLists.txt  main.cpp
cipher/tests/: test_utils.cpp  test_utils.h
cipher/tests/basic_transformations/: add_rkey_test_suite.cpp  basic_transformations_tests.h  m_col_test_suite.cpp  s_box_test_suite.cpp  s_key_inv_test_suite.cpp  s_rows_test_suite.cpp  xor_rkey_test_suite.cpp
cipher/utils/: basic_transformations.cpp  basic_transformations.h  cipher_defs.h
